# ails

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  TODO.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
crates/ails-ast/: Cargo.toml
crates/ails-codegen/: Cargo.toml
crates/ails-driver/: Cargo.toml
crates/ails-driver/src/: main.rs
crates/ails-hir/: Cargo.toml
crates/ails-lexer/: Cargo.toml
crates/ails-mir/: Cargo.toml
crates/ails-parser/: Cargo.toml
crates/ails-typecheck/: Cargo.toml
docs/: gemini_review_prompt_v0_18.md  gemini_review_prompt_v0_19.md  gemini_review_prompt_v0_20.md  gemini_review_prompt_v0_21_impl.md  gemini_review_prompt_v0_22_validator.md  gemini_review_prompt_v0_23_impl.md  gemini_review_prompt_v0_24_wiring.md  gemini_review_prompt_v0_25_driver.md  progress.md  roadmap.md
docs/implementation/: README.md  backend_handoff_draft.md  diagnostics_remediation_catalog.md  golden_test_plan.md  implementation_alignment_checklist.md  mir_fixture_format.md  mir_validator_design.md  (+8 more)
examples/: add.ails  branch_ok.ails  hir_demo.ails  if_demo.ails  let_set.ails  loop_ok.ails  mir_demo.ails  option_match.ails  own_param.ails  result_match.ails  type_const_demo.ails  view_call.ails  view_param.ails  while_demo.ails
spec/: README.md  ai-authoring-guide.md  control-flow-join.md  diagnostics.md  grammar.ebnf  hir.md  implementation-mapping.md  language.md  mir.md  named-sum-layout.md  ownership.md  pattern-matching.md  type-system.md
(+27 files in other folders)
